@startuml

title __DATA's Class Diagram__\n

  namespace com.cw.androidclient {
    namespace data {
      class com.cw.androidclient.data.LoginDataSource {
          + login()
          + logout()
      }
    }
  }
  

  namespace com.cw.androidclient {
    namespace data {
      class com.cw.androidclient.data.LoginRepository {
          {static} - instance : LoginRepository
          {static} + getInstance()
          + isLoggedIn()
          + login()
          + logout()
          - LoginRepository()
          - setLoggedInUser()
      }
    }
  }
  

  namespace com.cw.androidclient {
    namespace data {
      class com.cw.androidclient.data.Result {
          + toString()
          - Result()
      }
    }
  }
  

  namespace com.cw.androidclient {
    namespace data {
      class com.cw.androidclient.data.Result.Error {
          - error : Exception
          + Error()
          + getError()
      }
    }
  }
  

  namespace com.cw.androidclient {
    namespace data {
      class com.cw.androidclient.data.Result.Success {
          + Success()
          + getData()
      }
    }
  }
  

  com.cw.androidclient.data.LoginRepository o-- com.cw.androidclient.data.LoginDataSource : dataSource
  com.cw.androidclient.data.LoginRepository o-- com.cw.androidclient.data.model.LoggedInUser : user
  com.cw.androidclient.data.Result +-down- com.cw.androidclient.data.Result.Error
  com.cw.androidclient.data.Result +-down- com.cw.androidclient.data.Result.Success
  com.cw.androidclient.data.Result.Error -up-|> com.cw.androidclient.data.Result
  com.cw.androidclient.data.Result.Success -up-|> com.cw.androidclient.data.Result
  com.cw.androidclient.data.Result.Success o-- T : data


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
